# GoshApps-Downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  update.md  vite.config.ts
crates/engine/: Cargo.toml
crates/engine/migrations/: 001_initial.sql
crates/engine/src/: engine_adapter.rs  lib.rs  state.rs  types.rs  utils.rs  validation.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  engine_bridge.rs  main.rs  model.rs  shortcuts.rs
crates/gui/src/css/: style.css
crates/gui/src/dialogs/: add_download.rs  mod.rs  onboarding.rs  torrent_picker.rs
crates/gui/src/pages/: downloads.rs  history.rs  mod.rs  scheduler.rs  settings.rs  statistics.rs
crates/gui/src/widgets/: compact_download_row.rs  download_card.rs  mod.rs  notification_dropdown.rs  sidebar.rs  status_bar.rs  window.rs
data/: com.goshapps.downloader.desktop  com.goshapps.downloader.gschema.xml  com.goshapps.downloader.metainfo.xml
docs/: API.md  ARCHITECTURE.md
src/: App.css  App.tsx  main.tsx
src-electron/: main.ts  preload.ts  sidecar.ts  tray-popup-preload.ts  tray-popup.html
src-rust/: Cargo.toml
src-rust/icons/: icon.icns
src-rust/migrations/: 001_initial.sql
src-rust/src/: constants.rs  engine_adapter.rs  error.rs  lib.rs  main.rs  rpc_server.rs  types.rs  utils.rs
src-rust/src/commands/: download.rs  settings.rs  system.rs
src-rust/src/db/: mod.rs
src/components/: Onboarding.css  Onboarding.tsx
src/components/downloads/: AddDownloadModal.css  AddDownloadModal.tsx  CompactDownloadRow.css  CompactDownloadRow.tsx  DownloadCard.css  DownloadCard.tsx  SortableDownloadCard.css  SortableDownloadCard.tsx  TorrentFilePicker.css  TorrentFilePicker.tsx
src/components/layout/: NotificationDropdown.css  NotificationDropdown.tsx  Sidebar.css  Sidebar.tsx  (+2 more)
src/lib/: api.ts
src/pages/: About.css  About.tsx  Downloads.css  Downloads.tsx  History.css  History.tsx  Scheduler.css  Scheduler.tsx  Settings.css  Settings.tsx  Statistics.css  Statistics.tsx
src/store/: downloadSlice.ts  notificationSlice.ts  orderSlice.ts  statsSlice.ts  store.ts  themeSlice.ts  updaterSlice.ts
(+17 files in other folders)
