[package]
name = "gosh-fetch"
version = "3.0.0"
description = "Goshapps Downloader - a modern download manager with native GTK4 UI"
authors = ["Gosh"]
license = "AGPL-3.0"
repository = "https://github.com/goshitsarch-eng/Gosh-Fetch"
edition = "2021"

[[bin]]
name = "gosh-fetch"
path = "src/main.rs"

[dependencies]
gosh-fetch-engine = { path = "../engine" }
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
async-channel = "2"
glib = "0.20"
gio = "0.20"
gdk = { package = "gdk4", version = "0.9" }
cairo-rs = { version = "0.20", features = ["v1_16"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
libc = "0.2"
url = "2"
gosh-dl = { git = "https://github.com/goshitsarch-eng/gosh-dl", tag = "v0.3.2" }
